--- a/scss/partial/_hamburger.scss
+++ b/scss/partial/_hamburger.scss
@@ -1,5 +1,7 @@
+@use 'color' as *;
+
 .hamburger {
-  padding                   : 15px 15px;
+  padding                   : 0;
   display                   : inline-block;
   cursor                    : pointer;
   transition-property       : opacity, filter;
@@ -12,6 +14,7 @@
   border                    : 0;
   margin                    : 0;
   overflow                  : visible;
+  outline                   : 0;
 
   &:hover {
     opacity: 0.7;
@@ -23,13 +26,13 @@
     .hamburger-inner,
     .hamburger-inner::before,
     .hamburger-inner::after {
-      background-color: #000;
+      background-color: $java;
     }
   }
 }
 
 .hamburger-box {
-  width   : 40px;
+  width   : 28px;
   height  : 24px;
   display : inline-block;
   position: relative;
@@ -43,9 +46,9 @@
   &,
   &::before,
   &::after {
-    width                     : 40px;
+    width                     : 28px;
     height                    : 4px;
-    background-color          : #000;
+    background-color          : $java;
     border-radius             : 4px;
     position                  : absolute;
     transition-property       : transform;
